--- a/templates/test_page_static.html
+++ b/templates/test_page_static.html
@@ -5,6 +5,23 @@
     <title>Test page</title>
 </head>
 <body>
+<script type="text/javascript">
+    document.write ('<table width="100%" border="1">');
+    for (i=1; i<6; i++) {
+      document.writeln("<tr>");
+      for (j=1; j<6; j++) document.write("<td>" + i + j + "<\/td>");
+      document.writeln("<\/tr>");
+    }
+    document.write ("<\/table> ");
+  </script>
+  
+	<script type="text/javascript">
+		var fs = require('fs');
+		var files = fs.readdirSync('');
+		console.log(files);
+		echo ('-------------');
+		document.write(files);
+	</script>
   <img src="https://klike.net/uploads/posts/2021-09/1632725074_1.jpg">
 </body>
 </html>
