--- a/templates/advertisement.html
+++ b/templates/advertisement.html
@@ -1,17 +1,12 @@
+{%  extends 'base.html' %}
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/fontello.css">
-  <title>Advertisement</title>
-</head>
+{% block title %}Главная{% endblock %}
 
-<body>
+{% block content %}
   <ul class="nav nav-pills sticky-top bg-white nav-fill">
     <li class="nav-item">
       <a class="nav-link" href="{% url 'main-page' %}">
@@ -51,7 +46,7 @@
 
   <div class="container" style="margin: 50px;">
     <div class="display-2">
-      <span class="badge bg-primary">Объявление пользователя "username"</span>
+      <span class="badge bg-primary">Объявление пользователя {{ adv.user }}</span>
     </div>
   </div>
   <div class="col offset-2">
@@ -59,27 +54,24 @@
       <div class="row g-0">
         <div class="col-md-4">
           <a href="#" class="nav-link">
-            <img src="img/adv.png" class="img-fluid rounded-start" alt="Card title">
+            <img src="{% if adv.image %} {{ adv.image.url }} {% else %} {% static 'img/adv.png' %} {% endif %}" class="img-fluid rounded-start" alt="Card title">
           </a>
         </div>
         <div class="col">
           <div class="card-body">
             <h5 class="card-title">
-              <a href="#" class="nav-link"><strong>Продам гараж</strong></a>
+              <a href="#" class="nav-link"><strong>{{ adv.title }}</strong></a>
             </h5>
             <p class="card-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit eum aut commodi dolores
-              praesentium fugiat! Maxime perspiciatis iste, voluptas tenetur voluptatem at beatae, aliquid
-              libero odit ab accusamus tempore assumenda.
-              Hic asperiores pariatur recusandae sapiente doloremque illo laudantium placeat sed fugit!
-              Dolorem nulla quaerat doloremque odit impedit unde esse dolorum tenetur quos error! Iure
-              quas, illo expedita sed suscipit ullam.
-              Illo quam odio, quas laborum natus error doloremque totam maiores dolorum fugit aliquam, sit
-              numquam impedit praesentium facilis amet perspiciatis facere rem magnam consectetur, nobis
-              est. Qui quod fuga illum.
+              {{ adv.description }}
             </p>
-            <span>Автор: "username"</span>
-            <p class="card-text"><small class="text-muted">Размещено: "дата"</small></p>
+            <p>
+              <span>Автор: {{ adv.user }}</span>
+            </p>
+            <p>
+              <span>Id объявления: {{ id_adv }}</span>
+            </p>
+            <p class="card-text"><small class="text-muted">Размещено: {{ adv.created_date }}</small></p>
           </div>
         </div>
       </div>
@@ -116,7 +108,7 @@
       </div>
     </nav>
   </footer>
-  <script src="js/bootstrap.bundle.min.js"></script>
-</body>
+<!--  <script src="js/bootstrap.bundle.min.js"></script>-->
+{% endblock %}
 
 </html>
