--- a/templates/index.html
+++ b/templates/index.html
@@ -46,15 +46,19 @@
 
 <div id="carouselExampleControls" class="carousel slide bg-primary" data-bs-ride="carousel">
   <div class="carousel-inner">
+    {% for adv in advertisements %}
     <div class="carousel-item active">
+      <!--<img src="{% static 'img/adv.png' %}" class="mx-auto d-block w-33" alt="...">-->
+
+      <img src="{% if adv.image %} {{ adv.image.url }} {% else %} {% static 'img/adv.png' %} {% endif %}" height="189" class="mx-auto d-block w-33"  alt="...">
+    </div>
+    {% endfor %}
+    <!--<div class="carousel-item">
       <img src="{% static 'img/adv.png' %}" class="mx-auto d-block w-33" alt="...">
     </div>
     <div class="carousel-item">
       <img src="{% static 'img/adv.png' %}" class="mx-auto d-block w-33" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'img/adv.png' %}" class="mx-auto d-block w-33" alt="...">
-    </div>
+    </div>-->
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -100,7 +104,7 @@
     <div class="card mb-2" style="max-width: 1200px; margin-top: 20px;">
       <div class="row g-0">
         <div class="col-md-4">
-          <a href="advertisement.html" class="nav-link">
+          <a href="{% url 'advertisement' %}?id={{ adv.id }}" class="nav-link">
             <img src="{% if adv.image %} {{ adv.image.url }} {% else %} {% static 'img/adv.png' %} {% endif %}" class="img-fluid rounded-start" alt="Card title">
              <!--<img src="{% if adv.image %} {{ adv.image.url }} {% static 'img/adv.png' %} {% endif %}" class="img-fluid rounded-start" alt="Card title"> -->
           </a>
@@ -115,8 +119,8 @@
                 {{ adv.description }}
               </p>
               <span>Автор: {{ adv.user }}</span>
-
-              <p class="card-text"><small class="text-muted">Размещено: {{ adv.created_date }}</small></p>
+              <!--<span>Параметр из view: {{ picture }}</span>-->
+              <p class="card-text"><small class="text-muted">Размещено, дата: {{ adv.created_date }}</small></p>
               <span>Цена: {{ adv.price }} руб.</span>
             </a>
           </div>
