Урок 10, формы, + детальная страница advertisment

--- a/templates/advertisement.html
+++ b/templates/advertisement.html
@@ -46,7 +46,7 @@
 
   <div class="container" style="margin: 50px;">
     <div class="display-2">
-      <span class="badge bg-primary">Объявление пользователя {{ adv.user }}</span>
+      <span class="badge bg-primary">{{ adv.title }}</span>
     </div>
   </div>
   <div class="col offset-2">
