--- a/templates/app_auth/login.html
+++ b/templates/app_auth/login.html
@@ -4,16 +4,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{% block title %}Объявление{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
 
-
-
-
   <ul class="nav nav-pills sticky-top bg-white nav-fill">
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'main-page' %}">
+      <a class="nav-link" href="{% url 'main-page' %}"">
         <span style="font-weight: bold;">Главная</span>
       </a>
     </li>
@@ -22,17 +19,17 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="{% url 'advertisement-post' %}">
+      <a class="nav-link" href="{% url 'advertisement-post' %}">
         <span style="font-weight: bold;">Разместить объявление</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'register' %}">
+      <a class="nav-link" href="{% url 'main-page' %}">
         <span style="font-weight: bold;">Регистрация</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'login' %}">
+      <a class="nav-link active" aria-current="page" href="{% url 'login' %}">
         <span style="font-weight: bold;">Войти</span>
       </a>
     </li>
@@ -47,22 +44,37 @@
       </a>
     </li>
   </ul>
+  <div class="container">
+     {% if error %}
+  <div class="col-sm-4 offset-4 w-25">
+    <div class="form-label bg-warning" style="margin: 10px 0px;">{{ error }}</div>
+  </div>
+    {% endif %}
   <div class="row">
-    <div class="col" style="margin: 50px;">
+    <div class="col-8" style="margin: 50px;">
       <div class="display-2">
-        <span class="badge bg-primary">Сообщите миру об этом в этой форме5555 {{ var1 }}</span>
+        <span class="badge bg-primary">Страница авторизации пользователя</span>
       </div>
     </div>
   </div>
-  <div class="container">
-    <form method="post" enctype="multipart/form-data">
+    <form method="post">
       {% csrf_token %}
       <div class="row mb-3">
         <div class="col">
-          {{ form.as_p }}
+          <label class="col-sm-4 col-form-label offset-4">Username</label>
+          <div class="col-sm-4 offset-4 w-25">
+            <input type="text" name="username" id="username" class="form-control form-control-lg">
+          </div>
         </div>
       </div>
-
+      <div class="row mb-3">
+        <div class="col">
+          <label class="col-sm-4 col-form-label offset-4">Password</label>
+          <div class="col-sm-4 offset-4 w-25">
+            <input type="password" name="password" id="password" class="form-control form-control-lg">
+          </div>
+        </div>
+      </div>
       <div class="row mb-3 offset-sm-5">
         <div class="col">
           <button type="submit" class="btn btn-success">Принять</button>
@@ -70,8 +82,5 @@
       </div>
     </form>
   </div>
-  <!--<script src="js/bootstrap.bundle.min.js"></script>-->
-</body>
-
 {% endblock %}
-</html>
+
