--- a/templates/app_auth/register.html
+++ b/templates/app_auth/register.html
@@ -3,14 +3,13 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-{% block title %}Login{% endblock %}
+{% block title %}Регистрация{% endblock %}
 
 {% block content %}
 
   <ul class="nav nav-pills sticky-top bg-white nav-fill">
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'main-page' %}"">
+      <a class="nav-link" href="{% url 'main-page' %}">
         <span style="font-weight: bold;">Главная</span>
       </a>
     </li>
@@ -24,12 +23,12 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'register' %}">
+      <a class="nav-link active" aria-current="page" href="{% url 'register' %}">
         <span style="font-weight: bold;">Регистрация</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="{% url 'login' %}">
+      <a class="nav-link" href="{% url 'login' %}">
         <span style="font-weight: bold;">Войти</span>
       </a>
     </li>
@@ -46,9 +45,9 @@
   </ul>
   <div class="container">
   <div class="row">
-    <div class="col-8" style="margin: 50px;">
+    <div class="col" style="margin: 50px;">
       <div class="display-2">
-        <span class="badge bg-primary">Страница авторизации пользователя</span>
+        <span class="badge bg-primary">Страница регистрации пользователя</span>
       </div>
     </div>
   </div>
@@ -63,9 +62,34 @@
       </div>
       <div class="row mb-3">
         <div class="col">
+          <label class="col-sm-4 col-form-label offset-4">Name</label>
+          <div class="col-sm-4 offset-4 w-25">
+            <input type="text" class="form-control form-control-lg">
+          </div>
+        </div>
+      </div>
+      <div class="row mb-3">
+        <div class="col">
+          <label class="col-sm-4 col-form-label offset-4">Surname</label>
+          <div class="col-sm-4 offset-4 w-25">
+            <input type="text" class="form-control form-control-lg">
+          </div>
+        </div>
+      </div>
+      <div class="row mb-3">
+        <div class="col">
           <label class="col-sm-4 col-form-label offset-4">Password</label>
           <div class="col-sm-4 offset-4 w-25">
             <input type="password" class="form-control form-control-lg">
+          </div>
+        </div>
+      </div>
+      <div class="row mb-3">
+        <div class="col">
+          <label class="col-sm-4 col-form-label offset-4">Password confirmation</label>
+          <div class="col-sm-4 offset-4 w-25">
+            <input type="password" class="form-control form-control-lg">
+            <div class="form-label bg-warning" style="margin: 10px 0px;">Ошибка (если будет)</div>
           </div>
         </div>
       </div>
@@ -76,5 +100,7 @@
       </div>
     </form>
   </div>
+
 {% endblock %}
-</html>
+
+
